--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,17 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Acme&family=Bungee+Hairline&family=Caesar+Dressing&family=Cormorant:wght@300&family=El+Messiri:wght@400;500&family=Fredericka+the+Great&family=Jolly+Lodger&family=Josefin+Slab:wght@100;200&family=Jost:wght@100&family=Righteous&family=Rock+3D&family=Special+Elite&family=Syncopate&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Mega:wght@100;400&display=swap');
-// font-family: 'Bungee Hairline', cursive; |
-
-// font-family: 'Jost', sans-serif; |
-// font-family: 'Josefin Slab', serif;
-
-
-// font-family: 'Syncopate', sans-serif; 
-
-// font-family: 'Cormorant', serif;
-// font-family: 'Acme', sans-serif;
-
-
 $text: white;
 $background: #dfd3c3;
 $altbackground: #c7b198;
@@ -55,12 +41,13 @@ $border-radius: 0.5; //15% = 0.15, 50% = 0.50 etc.
     box-sizing: border-box;
   }
 }
+
 html {
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
 }
 ::-webkit-scrollbar {
-  width: 0.5em;
+  width: 1em;
   height: 1em;
 }
 ::-webkit-scrollbar-track {
@@ -75,47 +62,43 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  font-family: sans-serif;
- 
+  font-family: 'Ubuntu', sans-serif;
 }
-h1, h2 {
-  font-family: 'Bungee Hairline', cursive;
-}
-.nav {
+
+header {
   width: 100%;
   transition: all 0.3s ease-out;
-  opacity: 0;
-  height: 0;
-  z-index: 100;
-  background: white;
-}
-.fixed-top {
   position: fixed;
   top: 0;
-  width: 100%;
-  opacity: 1;
-}
-.navbar {
-  @include list-reset;
-  background: rgba(0, 0, 0, 0.85);
+  height: 7vh;
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  background: rgba(0, 0, 0, 0.85);
+  h2 {
+    color: white;
+    width: 20%;
+  }
+}
+nav {
+  width: 60%;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 2rem;
+  color: white;
+  text-transform: uppercase;
   a {
     text-decoration: none;
     color: white;
   }
-  li {
-    margin-left: 10px;
-    &:first-of-type {
-      width: 70%;
-    }
-  }
+  
 }
 
-.navbar-brand {
-  display: flex;
-}
+
 .video {
   width: 100%;
   height: 100vh;
@@ -127,22 +110,20 @@ h1, h2 {
 .body-container {
   position: relative;
 }
-.hei {
-  min-height: 100vh;
-}
+
 .hero-container {
   background: url("../assets/12.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   opacity: 0.99;
 }
 .hero-banner {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -151,8 +132,8 @@ h1, h2 {
   z-index: 100;
   position: relative;
   h1 {
-    font-family: 'Bungee Hairline', 'sans serif';
-    // font-weight: 100;
+    font-family: 'Noto Sans', sans-serif;
+     font-weight: 500;
     color: white;
     font-size: clamp(2rem, 5vw, 8rem);
     animation-name: opac;
@@ -177,29 +158,28 @@ h1, h2 {
 .contact-container {
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-end;
+  min-height: 90vh;
   flex-direction: row;
-  margin: 0 auto;
-  padding-top: 3rem;
+  margin: 5% auto 2.5%;
   background: white;
   h3 {
     font-size: 2rem;
   }
 }
 .contact-left {
-  width: 60%;
+  min-height: 100%;
+  width: 35%;
   padding: 0.5%;
   color: black;
   h2 {
     font-size: clamp(2rem, 5vw, 10rem);
     margin-block-start: 0em;
     margin-block-end: 0em;
-    letter-spacing: 15px;
   }
   p {
-    line-height: 1.6;
-    margin: 0 auto;
-    text-indent: 100px;
+    line-height: 2.4;
+    margin: 2.5% auto;
+    font-size: clamp(1rem, 1.25rem, 1.5rem);
   }
   ul {
     text-align: left;
@@ -210,67 +190,79 @@ h1, h2 {
   }
 }
 .contact-right {
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
-  
-  @include flex-space-evenly;
-  flex-direction: column;
-  width: 30%;
-  height: 70vh;
+  width: 35%;
+  min-height: 70vh;
   padding: 1%;
-  background: rgba(0, 0, 0, 0.75);
   h3 {
     color: $text;
-    font-size: 1.5rem;
+    font-size: clamp(1rem, 3rem, 3.5rem);
     margin-block-start: 0em;
-    margin-block-end: 0em;
+    margin-block-end: 0.5em;
   }
   p {
     color: $text;
     margin-block-start: 0em;
   }
   form {
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-      rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    
+    border-radius: 3px;
+    // box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    //   rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    //   rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     display: flex;
-    justify-content: space-evenly;
     flex-direction: column;
-    background: $text;
-    width: 95%;
-    height: 100%;
-    padding: 2%;
+    background: rgba(0, 0, 0, 0.75);
+    width: 100%;
+    padding: 5%;
+    label {
+      color: white;
+      margin: 2.5% 0;
+      font-weight: bold;
+      text-transform: uppercase;
+      font-size: 1.5rem;
+    } 
     div {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      margin: 1% auto;
+      margin: 2.5% 0;
+      label {
+        font-weight: 300;
+        text-transform: none;
+      }
     }
     input[type="submit"] {
-      border: none;
-      height: 50px;
-      width: 150px;
+      text-transform: uppercase;
+      border: none; 
       cursor: pointer;
       background: $altbackground;
-      font-size: 1.25rem;
-      margin: 0 auto;
+      font-size: 2rem;
+      margin: 2.5% auto;
+      font-weight: bold;
+      padding: 2% 5%;
+      transition: all 0.5s ease;
+      &:hover {
+        background: red;
+        color: white;
+      }
     }
     input[type="text"],
     input[type="tel"],
     input[type="email"] {
-      line-height: 2;
-      border: none;
+      border-radius: 3px;
+      line-height: 3;
+      margin-bottom: 1%;
       background: $text;
       border-bottom: 2px solid black;
+      text-indent: 5px;
       &::placeholder {
         color: black;
       }
+    
     }
   }
 }
-.centered-label {
-  text-align: center;
-  margin-bottom: 5%;
-}
+
 .btn-contact {
   line-height: 2;
   text-align: center;
@@ -285,6 +277,9 @@ h1, h2 {
   display: inline-block;
   padding: 1rem 2rem;
   font-weight: bold;
+}
+.btn:hover {
+  cursor: pointer;
 }
 
 .scrollToTop {
@@ -316,52 +311,73 @@ h1, h2 {
   opacity: 1;
   transform: translateY(0);
 }
-.service-header {
-    width: 100%;
-    text-align: center;
-  }
+
 .services-container {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  flex-direction: column;
-  details {
-    background-image: linear-gradient(-225deg, rgb(89, 110, 121) 39%, rgb(89, 110, 121) 10%);
-    width: 100%;
-   
+  h2 {
+    font-size: clamp(2rem, 2rem, 2rem);
   }
 }
+#accordion {
+  margin: 5% auto;
+}
 
+.menu {
+  border:1px solid white;
+  border-bottom:none;
+}
+
+ .menu:last-child {
+  border-bottom:1px solid white;
+}
+.header {
+  display:flex;
+  padding: 2.5%; 
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.65);
+  color: white;
+}
+.title {
+  flex:1;
+}
+.acc-icon {
+  width:20px;
+} 
+.content {
+  max-height: 0;
+  transition: max-height 1s ease-out;
+  overflow: hidden;
+  padding:0;
+  p {
+    padding: 1%;
+  }
+}
+.content-transition {
+  max-height: 1500px;
+  transition: max-height 2s ease-in;
+} 
 .cta-banner {
-  background: $accent;
+  background: url(../assets/contbg.jpg) center;
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
   color: white;
   text-align: center;
-  margin-top: 5%;
+  margin-top: 1.5%;
   margin-bottom: 5%;
   div{
     display: flex;
     flex-direction: column;
     min-height: 18vh;
-    width: fit-content;
+    width: 100%;
+    background: rgba(45, 44, 62, 0.5);
   }
   h3 {
-    font-size: clamp(1rem, 1vw, 2rem);
-    position: relative;
-    &::before {
-      content: "";
-      display: block;
-      height: 5px;
-      width: 100%;
-      background: white;
-      position: absolute;
-      bottom: -10px;
-    }
+    font-size: clamp(2rem, 2vw, 2rem);
+    border-bottom: 5px solid white;
+    width: fit-content;
+    margin: 1% auto;
+
   }
   span {
     font-size: clamp(2rem, 2.5vw, 3rem);
@@ -372,6 +388,23 @@ h1, h2 {
     font-size: clamp(1rem, 1vw, 2rem);
   }
 }
+.gallery {
+  width: 90%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 500px);
+  gap: 10px;
+  place-content: center;
+  img {
+    width: 500px;
+    height: 500px;
+  }
+
+}
+.gallery-title {
+  text-align: center;
+  font-size: clamp(2rem, 3vw, 3rem);
+}
 
 .about-container {
   @include flex-space-evenly;
@@ -380,27 +413,19 @@ h1, h2 {
   margin: 0 auto;
 }
 .section {
-  width: 33%;
+  width: 50%;
   @include flex-space-evenly;
   flex-direction: column;
   gap: 0.5rem;
   h3 {
-    
     font-size: 2rem;
   }
   p {
     @include flex-center;
-    width: 90%;
-    padding: 10%;
-    border: 7px solid white;
-    line-height: 1.6;
-  }
-  ul {
-    @include list-reset;
-    width: 90%;
-    padding: 10%;
-    border: 7px solid white;
-    line-height: 1.6;
+    padding: 1%;
+    line-height: 2;
+    font-size: clamp(1.25rem, 1.75rem, 2rem);
+    width: 80%;
   }
 }
 
@@ -547,6 +572,8 @@ h4 {
   text-indent: 10px;
 }
 
+
+
 @media (max-width: 1400px) {
   .about-container {
     flex-direction: column;
@@ -567,5 +594,26 @@ h4 {
       flex-direction: column;
     
   }
+  .gallery {
+    grid-template-columns: repeat(auto-fit, 300px);
+    gap: 15px;
+    place-content: center;
+    img {
+      width: 300px;
+      height: 300px;
+    }
+  }
   
+}
+
+@media screen and (max-width: 768px) {
+  .gallery {
+    grid-template-columns: repeat(auto-fit, 150px);
+    gap: 10px;
+    place-content: center;
+    img {
+      width: 150px;
+      height: 150px;
+    }
+  }
 }
