--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -74,15 +74,19 @@ header {
   z-index: 10;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background: rgba(0, 0, 0, 0.85);
   h2 {
     color: white;
     width: 20%;
+    margin-left: 1%;
+    font-size: 1.5rem;
+    text-transform: uppercase;
   }
 }
 nav {
   width: 60%;
+  margin-right: 1%;
 }
 .navbar {
   display: flex;
@@ -91,11 +95,18 @@ nav {
   gap: 2rem;
   color: white;
   text-transform: uppercase;
+  font-size: 1.5rem;
   a {
     text-decoration: none;
-    color: white;
+    color: rgba(255, 255, 255, 0.75);
+    &:hover {
+      color: rgba(255, 255, 255, 1);
+    }
   }
-  
+  p {
+    font-weight: bold;
+    margin-right: 0;
+  }
 }
 
 
