--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,7 @@ nav {
 .navbar a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.75);
+  transition: all 0.25s ease;
 }
 .navbar a:hover {
   color: white;
@@ -280,12 +281,15 @@ nav {
   border: none;
   background: red;
   display: inline-block;
-  padding: 1rem 2rem;
+  padding: 1% 2%;
   font-weight: bold;
+  font-size: 1.25rem;
+  transition: all 0.25s ease;
 }
-
 .btn:hover {
   cursor: pointer;
+  background: white;
+  color: black;
 }
 
 .scrollToTop {
