--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,7 +76,7 @@ nav {
   transition: all 0.25s ease;
 }
 .navbar a:hover {
-  color: white;
+  color: rgb(255, 255, 255);
 }
 .navbar p {
   font-weight: bold;
@@ -429,8 +429,8 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   gap: 0.5rem;
-  flex-direction: row;
-  margin: 0 auto;
+  flex-direction: column;
+  margin: 2.5% auto;
 }
 
 .section {
@@ -443,6 +443,11 @@ nav {
 }
 .section h3 {
   font-size: 2rem;
+  -webkit-margin-before: 0em;
+          margin-block-start: 0em;
+  -webkit-margin-after: 0em;
+          margin-block-end: 0em;
+  border-bottom: 1px solid black;
 }
 .section p {
   display: flex;
