--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -424,8 +424,8 @@ nav {
 .about-container {
   @include flex-space-evenly;
   gap: 0.5rem;
-  flex-direction: row;
-  margin: 0 auto;
+  flex-direction: column;
+  margin: 2.5% auto;
 }
 .section {
   width: 50%;
@@ -434,6 +434,9 @@ nav {
   gap: 0.5rem;
   h3 {
     font-size: 2rem;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    border-bottom: 1px solid black;
   }
   p {
     @include flex-center;
