--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@ body {
   padding: 0;
   width: 100%;
   font-family: "Ubuntu", sans-serif;
+  position: relative;
 }
 
 header {
@@ -50,9 +51,8 @@ header {
 }
 header h2 {
   color: white;
-  width: 20%;
   margin-left: 1%;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 1.2vmin, 1.5rem);
   text-transform: uppercase;
 }
 
@@ -68,7 +68,7 @@ nav {
   gap: 2rem;
   color: white;
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 1.2vmin, 1.5rem);
 }
 .navbar a {
   text-decoration: none;
@@ -614,29 +614,27 @@ nav {
   text-indent: 10px;
 }
 
-@media (max-width: 1400px) {
-  .about-container {
-    flex-direction: column;
-  }
+.mobile-nav {
+  display: none;
+}
 
-  .contact-container {
-    flex-direction: column;
-  }
+.mobile-navlinks {
+  display: none;
+  place-content: center;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
 
-  .contact-right,
-.contact-left {
-    margin: 1%;
-    width: 95%;
-  }
+.idk {
+  display: flex;
+}
 
-  .section {
-    width: 90%;
-  }
-
-  .cta-banner {
-    flex-direction: column;
-  }
-
+@media (max-width: 1440px) {
   .gallery {
     grid-template-columns: repeat(auto-fit, 300px);
     gap: 15px;
@@ -645,6 +643,15 @@ nav {
   .gallery img {
     width: 300px;
     height: 300px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .mobile-nav {
+    display: flex;
+  }
+
+  .nav {
+    display: none;
   }
 }
 @media screen and (max-width: 768px) {
@@ -656,5 +663,27 @@ nav {
   .gallery img {
     width: 150px;
     height: 150px;
+  }
+
+  .about-container {
+    flex-direction: column;
+  }
+
+  .contact-container {
+    flex-direction: column;
+  }
+
+  .contact-right,
+.contact-left {
+    margin: 1% auto;
+    width: 95%;
+  }
+
+  .section {
+    width: 90%;
+  }
+
+  .cta-banner {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=styles.css.map */
