--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -63,6 +63,7 @@ body {
   padding: 0;
   width: 100%;
   font-family: 'Ubuntu', sans-serif;
+  position: relative;
 }
 
 header {
@@ -78,9 +79,9 @@ header {
   background: rgba(0, 0, 0, 0.85);
   h2 {
     color: white;
-    width: 20%;
+    
     margin-left: 1%;
-    font-size: 1.5rem;
+    font-size: clamp(1rem, 1.2vmin, 1.5rem);
     text-transform: uppercase;
   }
 }
@@ -95,7 +96,7 @@ nav {
   gap: 2rem;
   color: white;
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 1.2vmin, 1.5rem);
   a {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.75);
@@ -589,29 +590,27 @@ h4 {
 .copyright {
   text-indent: 10px;
 }
+.mobile-nav {
+  display: none;
+}
+.mobile-navlinks {
+  display: none; 
+  place-content: center;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+.idk {
+  display: flex;
+ 
+}
 
+@media (max-width: 1440px) {
 
-
-@media (max-width: 1400px) {
-  .about-container {
-    flex-direction: column;
-  }
-  .contact-container {
-    flex-direction: column;
-  }
-  .contact-right,
-  .contact-left {
-    margin: 1%;
-    width: 95%;
-  }
-  .section {
-    width: 90%;
-  }
-  .cta-banner {
-    
-      flex-direction: column;
-    
-  }
   .gallery {
     grid-template-columns: repeat(auto-fit, 300px);
     gap: 15px;
@@ -624,6 +623,16 @@ h4 {
   
 }
 
+@media screen and (max-width: 1024px) {
+  .mobile-nav {
+    display: flex;
+  }
+ 
+  .nav {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .gallery {
     grid-template-columns: repeat(auto-fit, 150px);
@@ -633,5 +642,25 @@ h4 {
       width: 150px;
       height: 150px;
     }
+  }  
+  .about-container {
+    flex-direction: column;
   }
+  .contact-container {
+    flex-direction: column;
+  }
+  .contact-right,
+  .contact-left {
+    margin: 1% auto;
+    width: 95%;
+  }
+  .section {
+    width: 90%;
+  }
+  .cta-banner {
+    
+      flex-direction: column;
+    
+  }
+
 }
