--- a/styles/styles.css
+++ b/styles/styles.css
@@ -600,7 +600,7 @@ nav {
   overflow: hidden;
   padding-bottom: 25%;
   position: relative;
-  height: 500px;
+  height: 100vh;
   width: 100%;
 }
 
@@ -644,6 +644,14 @@ nav {
     width: 300px;
     height: 300px;
   }
+
+  .footer-left-container {
+    flex-direction: column-reverse;
+  }
+
+  .footer-column {
+    margin: 0;
+  }
 }
 @media screen and (max-width: 1024px) {
   .mobile-nav {
@@ -685,5 +693,13 @@ nav {
 
   .cta-banner {
     flex-direction: column;
+  }
+
+  .footer-container {
+    flex-direction: column;
+  }
+
+  .footer-left-container {
+    margin: 5% auto;
   }
 }/*# sourceMappingURL=styles.css.map */
