--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -578,7 +578,7 @@ h4 {
   overflow:hidden;
   padding-bottom: 25%;
   position:relative;
-  height: 500px;
+  height: 100vh;
   width: 100%;
 }
 
@@ -620,7 +620,12 @@ h4 {
       height: 300px;
     }
   }
-  
+  .footer-left-container {
+    flex-direction: column-reverse;
+  }
+  .footer-column {
+    margin: 0;  
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -662,5 +667,10 @@ h4 {
       flex-direction: column;
     
   }
-
+  .footer-container {
+    flex-direction: column;
+  }
+  .footer-left-container {
+  margin: 5% auto;
+  }
 }
