--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -443,7 +443,7 @@ nav {
     @include flex-center;
     padding: 1%;
     line-height: 2;
-    font-size: clamp(1.25rem, 1.75rem, 2rem);
+    font-size: clamp(1rem, 1.2vmin, 1.25rem);
     width: 80%;
   }
 }
